--- a/Q-municate_app/src/main/res/layout/activity_landing.xml
+++ b/Q-municate_app/src/main/res/layout/activity_landing.xml
@@ -2,18 +2,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_image"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/logo_full_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:scaleType="fitCenter"
         android:src="@drawable/logo_full"
-        android:layout_marginBottom="5dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/connect_facebook_button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <RelativeLayout
         android:id="@+id/connect_facebook_button"
