--- a/Q-municate_app/src/main/res/layout/activity_splash.xml
+++ b/Q-municate_app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_image"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
@@ -11,16 +11,16 @@
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
         android:src="@drawable/logo_splash"
-
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:layout_below="@+id/logo_full_imageview"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"/>
+        android:layout_marginTop="60dp" />
 
 </RelativeLayout>
